--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "^1.95.3",
     "@supabase/supabase-js": "^2.45.3",
     "@vercel/og": "^0.6.2",
+    "blinksights-sdk": "^1.0.12",
     "cheerio": "^1.0.0",
     "next": "14.2.7",
     "react": "^18",
