--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   "dependencies": {
     "@dialectlabs/blinks": "^0.9.3",
     "@solana/actions": "^1.6.4",
+    "@solana/spl-token": "^0.4.8",
     "@solana/web3.js": "^1.95.3",
     "@supabase/supabase-js": "^2.45.3",
     "@vercel/og": "^0.6.2",
-    "blinksights-sdk": "^1.0.12",
     "cheerio": "^1.0.0",
     "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-tweet": "^3.2.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.16.2",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   }
 }
