--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@solana/web3.js": "^1.95.3",
     "@supabase/supabase-js": "^2.45.3",
     "@vercel/og": "^0.6.2",
-    "cheerio": "^1.0.0",
+    "blinksights-sdk": "^1.0.13",
     "next": "14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,5 +30,8 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "engines": {
+    "node": "^20.x"
   }
 }
