--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.5.4"
   },
   "engines": {
-    "node": "^19.x"
-  }
+    "node": "^20.x"
+  },
+  "packageManager": "pnpm@8.x"
 }
