--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
     "@supabase/supabase-js": "^2.45.3",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/og": "^0.6.2",
     "blinksights-sdk": "^1.0.13",
     "next": "14.2.7",
