--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@dialectlabs/blinks": "^0.9.3",
     "@dialectlabs/react-ui": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@solana/actions": "^1.6.4",
     "@solana/spl-token": "^0.4.8",
     "@solana/wallet-adapter-base": "^0.9.23",
@@ -22,10 +25,15 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/og": "^0.6.2",
     "blinksights-sdk": "^1.0.13",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-tweet": "^3.2.1"
+    "react-tweet": "^3.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.5.2",
